<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_all_games"
        android:icon="@drawable/ic_game"
        android:title="@string/games_list"/>

    <item
        android:id="@+id/menu_my_games"
        android:icon="@drawable/ic_cloud_outline"
        android:title="@string/my_games"/>

<!--    <item-->
<!--        android:id="@+id/menu_info"-->
<!--        android:icon="@drawable/ic_info_outline"-->
<!--        android:title="@string/info" />-->

</menu>