...
                android:text="Games list"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:fontFamily="@font/montserrat_bold"/>

            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"/>
        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:searchIcon="@drawable/ic_search"
            app:queryHint="@string/search_game"
            app:defaultQueryHint="@string/search_game"
...
